--- a/style.css
+++ b/style.css
@@ -1,148 +1,69 @@
-body {
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    font-size: 18px;
-    line-height: 34px;
-    color: #777777;
+.profile-img{
+    margin-bottom: 10px;
+    margin-top: 10px;
+    width: 100%;
+}
+
+h1 {
+padding-bottom: 20px;
+font-size: 30px;
+line-height: 49px;
+border-bottom: 3px solid #dddddd;
+color: #4aaaa5;
+font-family: Georgia, 'Times New Roman', Times, serif3
+}
+
+body{
     background: url("assets/images/concrete_seamless.png");
-  }
-  
-  * {
-    box-sizing: border-box;
-  }
-  
-  /* general */
-  
-  .container {
-    width: 100%;
-    max-width: 960px;
-    margin: 0 auto;
-    clear: both;
-  }
-  
-  h1,
-  h2,
-  h3,
-  p {
-    margin-bottom: 20px;
-  }
-  
-  p:last-child {
-    margin-bottom: 0;
-  }
-  
-  h1,
-  h2,
-  h3 {
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-weight: 700;
-    color: #4aaaa5;
-  }
-  
-  h1 {
-    padding-bottom: 20px;
-    font-size: 30px;
-    line-height: 49px;
-    border-bottom: 3px solid #dddddd;
-  }
-  
-  h2,
-  h3 {
-    font-size: 22px;
-  }
-  
-  /* header */
-  
-  #masthead {
-    position: fixed;
-    z-index: 99;
-    width: 100%;
-    margin: 0 0 30px;
-    overflow: auto;
-    color: #ffffff;
-    background: #ffffff;
-    border-bottom: 2px solid #cccccc;
-  }
-  
-  #logo {
-    float: left;
-    width: 250px;
-    height: 90px;
-    font-family: Georgia, Times, "Times New Roman", serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 90px;
-    color: #ffffff;
-    text-align: center;
-    text-decoration: none;
-    background: #4aaaa5;
-  }
-  
-  nav {
-    float: right;
-    margin-top: 25px;
-  }
-  
-  nav a {
-    display: inline-block;
-    padding-left: 15px;
-    margin-left: 15px;
-    line-height: 18px;
-    color: #999;
-    text-decoration: none;
-    border-left: 1px solid #efefef;
-  }
-  
-  nav a:first-child {
-    border-left: 0 none;
-  }
-  
-  /* footer */
-  
-  footer {
-    padding: 30px 0;
-    clear: both;
-    font-size: 12px;
-    color: #ffffff;
-    color: #cccccc;
-    text-align: center;
-    background: #666666;
-    border-top: 8px solid #4aaaa5;
-    height: 50px;
-  }
-  
-  h3, h2 {
-    padding-bottom: 20px;
-    margin-bottom: 15px;
-    line-height: 22px;
-    border-bottom: 2px solid #eeeeee;
-  }
-  
-  /* main */
-  
-  #main-container {
-    padding-top: 130px;
-    min-height: calc(100vh - 70px);
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+#main-container{
+    background-color: #ffffff;
+    padding: 20px;
     line-height: 2;
-  }
-  
-  .main-section {
-    float: left;
-    width: 100%;
-    max-width: 960px;
-    padding: 30px;
-    margin: 0 0 40px;
-    background: #ffffff;
     border: 1px solid #dddddd;
-    
-  }
-  
-  /* portfolio page */
-  
+    margin-bottom: 50px;
+
+}
+
+footer{
+    text-align: center;
+    background-color: #ffffff;
+    position: relative;
+    bottom: 0;
+    background-color: #666666;
+    border-top:8px solid #4aaaa5;
+    height: 50px;
+    color: #cccccc;
+}
+
+/*li.nav-item{
+    box-sizing: border-box;
+    margin: 10px;
+}*/
+
+.navbar{
+    margin-bottom: 30px;
+    border-bottom: 2px solid #cccccc;
+}
+
+.navbar-light .navbar-brand{
+    background-color: #4aaaa5;
+    padding: 20px;
+    font-family: Georgia, Times, "Times New Roman", serif;
+    font-weight: 700;
+    color: #ffffff;
+    font-size: 20px;
+}
+
+/*--portfolio page--*/
+
   .work {
     position: relative;
     float: left;
-    width: 274px;
-    margin: 20px 0 25px;
+    width: 100%;
+    margin: 10px 0px;
     overflow: auto;
   }
   
@@ -169,52 +90,3 @@ body {
     background: #4aaaa5;
     border-bottom: 0;
   }
-  
-  .auth-image {
-    float: left;
-    width: 200px;
-    height: auto;
-    margin-top: 10px;
-    margin-right: 25px;
-  }
-  
-  /* contact page */
-  
-  #contact-form ul {
-    margin-bottom: 20px;
-  }
-  
-  #contact-form li {
-    margin-bottom: 10px;
-  }
-  
-  label,
-  input[type=text],
-  input[type=email],
-  textarea {
-    display: block;
-    width: 100%;
-  }
-  
-  input[type=text],
-  input[type=email],
-  textarea {
-    height: 35px;
-    padding: 0 10px;
-    font-size: 14px;
-    border: 1px solid #dddddd;
-  }
-  
-  textarea {
-    height: 200px;
-  }
-  
-  input[type=submit] {
-    padding: 10px 30px;
-    font-size: 18px;
-    color: #ffffff;
-    cursor: pointer;
-    background: #4aaaa5;
-    border: 0 none;
-  }
-  
